<resources>
    <string name="app_name">Neurorch</string>
    <string name="first_button">Get result</string>
    <string name="second_button">Gallary</string>
    <string name="returnToStart">Go back</string>
    <string name="main_1_name">Architectural scanner</string>
    <string name="appName">neuroarch</string>
    <string name="homePageStart">start</string>
    <string name="information">Building style information</string>
    <string name="mainInformation">Main information</string>
    <string name="deconstructivism">Деконструктивизм — странный,
        но очень креативный стиль архитектуры XX века. Впервые появился в конце 1980-х годов,
        главным образом в Лос-Анджелесе (штат Калифорния), а также в Европе.
        Деконструкция поощряет радикальную свободу формы и открытое проявление сложности в здании,
        а не строгое внимание к функциональным проблемам и элементам традиционного дизайна
        (таким как прямые углы или сетки).</string>
    <string name="classicism">Масштаб, колонны, мрамор — кажется, узнать классическое здание среди других не составит труда.
        На самом деле стиль многолик и разнообразен.
        Классицизм — это архитектурный стиль, который был популярен в период 1750–1830 годов.
        Его часто называют неоклассицизмом, чтобы отличить от архитектуры античности или эпохи Возрождения.
        Открытия, исследования и археологические раскопки классических памятников в Италии, Греции и Малой Азии сыграли большую роль в его развитии.
        Античность считалась главным источником вдохновения архитекторов того времени.
    </string>
    <string name="baroque">Барокко впечатляет театральностью декора, яркими красками, обилием позолоты.
    Барокко появилось в Италии в конце XVI века. В первую очередь, барокко характеризует роскошь:
        богатые украшения, позолота, витые колонны, обилие скульптур и декоративных мотивов.
        Вскоре этот стиль перешел из церковного строительства в светскую жизнь. Сегодня он признан одним из основных архитектурных стилей в Европе.
    </string>
    <string name="gothic">Величественный и таинственный, готический стиль стал ярким символом европейской архитектуры Средневековья.
        Он соединил в себе суровость камня, лёгкость стекла и яркость витражных красок.
        Устремлённые ввысь остроконечные башни, невесомые полуарки, строгие вертикальные колонны и даже заострённые кверху оконные проёмы
        — всё это демонстрирует стремление человечества к небесному, возвышенному, запредельному.
    </string>
    <string name="modernism">Модернизм — это новаторский архитектурный стиль начала XX века, зародившийся в Европе и быстро распространившийся по всему миру.
        Появление стиля обязано трём важным факторам: стремление отказаться от традиций и переосмыслить прошлое, развитие технического прогресса,
        позволившее создавать сложные детали, и переломный исторический момент, который способствовал росту национального самосознания в европейских странах.</string>
</resources>