<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/city"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="700dp"
    tools:context=".MainActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/cameraView"
        android:layout_width="324dp"
        android:layout_height="324dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="336dp"
        android:layout_height="340dp"
        android:background="@drawable/roundedcamera"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/takePicture"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/first_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/galleryView"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/galleryView"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:text="@string/second_button"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/takePicture" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="330dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/main_1_name"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>